--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-# the python lib in 3.6.8
+Numpy==1.26.3
+Pandas==2.1.4
+mpi4py==3.1.5
+sklearn==1.3.2
+matplotlib.pyplot==3.8.2
+scipy==1.11.4
+statsmodels==0.14.1
+
+
